--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -5,5 +5,5 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*", "auth-middleware.js", "server.js"]
+  "include": ["src/**/*", "auth-middleware.js"]
 }
