--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "google-auth-library": "^9.15.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "uuid": "^11.0.4",
     "yup": "^1.6.1"
