--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,3 +4,7 @@ python-dotenv == 1.0.1
 sqlalchemy == 2.0.37
 uvicorn == 0.34.0
 supabase == 2.11.0
+pydantic == 2.10.5
+pyjwt == 2.10.1
+passlib == 1.7.4
+google-auth == 2.37.0
