--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "google-auth-library": "^9.15.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "npm": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
