--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,3 +8,6 @@ pydantic == 2.10.5
 pyjwt == 2.10.1
 passlib == 1.7.4
 google-auth == 2.37.0
+request == 2.32.3
+httpx == 0.27.2
+python-jose == 3.3.0
