--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "redux-persist": "^6.0.0",
     "uuid": "^11.0.4",
     "yup": "^1.6.1"
   },
