--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,8 +8,11 @@ pydantic == 2.10.5
 pyjwt == 2.10.1
 passlib == 1.7.4
 google-auth == 2.37.0
-request == 2.32.3
 httpx == 0.27.2
-python-jose == 3.3.0
-PyPDF == 3.0.1
+PyPDF2 == 3.0.1
 python-multipart == 0.0.20
+google-api-python-client == 2.159.0
+google-auth-httplib2 == 0.2.0
+google-auth-oauthlib == 1.2.1
+requests == 2.32.3
+python-jose == 3.3.0
